# r2ft

./: .gitignore  Cargo.toml  README.md  test_coverage.sh
spec/: README.md  RFT Robust File Transfer Protocol.md  Rust SOFT.odp  Soft_spec_full.docx  rft.mkd
src/: client.rs  common.rs  lib.rs  main.rs  options.rs  server.rs
src/app/: frame.rs  get.rs  ls.rs  mod.rs  server.rs  state.rs  test.rs
src/common/: fnv1a32.rs  mod.rs  mtu.rs  udp.rs
src/transport/: client.rs  common.rs  connection.rs  frame.rs  jobs.rs  mod.rs  server.rs  test.rs
testdata/: test.txt
