[package]
name = "rft"
version = "0.1.0"
authors = ["Peter Okelmann <okelmann@in.tum.de>", "Joseph Birkner <joseph.birkner@tum.de>", "Johannes Abel <abel@in.tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
clap = "^2"
byteorder = "^1.3.0"
leb128 = "^0.2.0"
itertools = "^0.9.0"
num = "^0.3.0"
num-derive = "^0.3.1"
num-traits = "^0.2.12"
rand = "^0.7"
